--- a/Barcode Scanner/.classpath
+++ b/Barcode Scanner/.classpath
@@ -2,28 +2,28 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/commons-compress-1.18/commons-compress-1.18.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/commons-compress-1.18/commons-compress-1.18-javadoc.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/commons-compress-1.18/commons-compress-1.18-sources.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/commons-compress-1.18/commons-compress-1.18-tests.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/commons-compress-1.18/commons-compress-1.18-test-sources.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-examples-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-excelant-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-ooxml-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-ooxml-schemas-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/poi-scratchpad-4.0.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/ooxml-lib/curvesapi-1.05.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/ooxml-lib/xmlbeans-3.0.1.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/activation-1.1.1.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/commons-codec-1.11.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/commons-collections4-4.2.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/jaxb-api-2.3.0.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/jaxb-core-2.3.0.1.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/jaxb-impl-2.3.0.1.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="H:/Eclipse/Java-Excel Apache/poi-4.0.0/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="src/lib/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-collections4-4.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-compress-1.18-javadoc.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-compress-1.18-sources.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-compress-1.18-test-sources.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-compress-1.18-tests.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/curvesapi-1.05.jar"/>
+	<classpathentry kind="lib" path="src/lib/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/jaxb-impl-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="src/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-examples-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-excelant-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-ooxml-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-ooxml-schemas-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/poi-scratchpad-4.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/xmlbeans-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
