--- a/Barcode Scanner/.classpath
+++ b/Barcode Scanner/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="lib/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src/lib"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="src/lib/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="src/lib/commons-codec-1.11.jar"/>
@@ -26,5 +27,10 @@
 	<classpathentry kind="lib" path="src/lib/poi-scratchpad-4.0.0.jar"/>
 	<classpathentry kind="lib" path="src/lib/xmlbeans-3.0.1.jar"/>
 	<classpathentry kind="lib" path="src/lib/miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/miglayout-4.0-ideutil.jar"/>
+	<classpathentry kind="lib" path="src/lib/miglayout-4.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="src/lib/miglayout-4.0-sources.jar"/>
+	<classpathentry kind="lib" path="src/lib/miglayout-4.0-swing.jar"/>
+	<classpathentry kind="lib" path="src/lib/miglayout-4.0-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
